--- a/RecyclerView_OLD/app/build.gradle
+++ b/RecyclerView_OLD/app/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 
     // Dependency for Google Sign-In
     implementation 'com.google.android.gms:play-services-auth:11.8.0'
+    implementation 'com.google.android.gms:play-services-analytics:11.8.0'
 
     // Dependency for FCM
     implementation "com.google.firebase:firebase-messaging:11.8.0"
