--- a/RecyclerView_OLD/app/build.gradle
+++ b/RecyclerView_OLD/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.bbcafe.community"
-        minSdkVersion 23
+        minSdkVersion 21
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -23,7 +23,9 @@ dependencies {
 
     // Dependency for Google Sign-In
     implementation 'com.google.android.gms:play-services-auth:11.8.0'
+
     implementation 'com.google.android.gms:play-services-analytics:11.8.0'
+    implementation 'com.google.android.gms:play-services-ads:11.8.0'
 
     // Dependency for FCM
     implementation "com.google.firebase:firebase-messaging:11.8.0"
