--- a/RecyclerView_OLD/app/build.gradle
+++ b/RecyclerView_OLD/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
+    flavorDimensions "default"
     defaultConfig {
         applicationId "com.bbcafe.community"
         minSdkVersion 21
